--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wezterm"]
 	path = wezterm
 	url = https://github.com/colintran2205/wezterm.git
+[submodule "nvim"]
+	path = nvim
+	url = https://github.com/colintran2205/nvim.git
